--- a/package.json
+++ b/package.json
@@ -10,14 +10,28 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^18.2.0",
+    "@angular/animations": "^18.2.1",
+    "@angular/cdk": "^18.1.2",
     "@angular/common": "^18.2.0",
     "@angular/compiler": "^18.2.0",
     "@angular/core": "^18.2.0",
     "@angular/forms": "^18.2.0",
+    "@angular/material": "^18.2.1",
     "@angular/platform-browser": "^18.2.0",
     "@angular/platform-browser-dynamic": "^18.2.0",
     "@angular/router": "^18.2.0",
+    "@fortawesome/angular-fontawesome": "^0.15.0",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@nebular/eva-icons": "^14.0.0",
+    "@nebular/theme": "^14.0.0",
+    "angular-bootstrap-md": "^4.3.2",
+    "bootstrap": "^5.3.3",
+    "eva-icons": "^1.1.3",
+    "font-awesome": "^4.7.0",
+    "jwt-decode": "^4.0.0",
+    "ngx-toastr": "^19.0.0",
+    "primeicons": "^7.0.0",
+    "primeng": "^17.18.9",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
@@ -26,6 +40,8 @@
     "@angular-devkit/build-angular": "^18.2.1",
     "@angular/cli": "^18.2.1",
     "@angular/compiler-cli": "^18.2.0",
+    "@fortawesome/fontawesome-free": "^6.6.0",
+    "@schematics/angular": "^18.2.1",
     "@types/jasmine": "~5.1.0",
     "jasmine-core": "~5.2.0",
     "karma": "~6.4.0",
