--- a/package.json
+++ b/package.json
@@ -22,13 +22,22 @@
     "@angular/router": "^18.2.0",
     "@fortawesome/angular-fontawesome": "^0.15.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@highcharts/map-collection": "^2.3.0",
     "@nebular/eva-icons": "^14.0.0",
     "@nebular/theme": "^14.0.0",
+    "@swimlane/ngx-charts": "^20.5.0",
     "angular-bootstrap-md": "^4.3.2",
     "bootstrap": "^5.3.3",
+    "chart.js": "^4.4.4",
+    "echarts": "^5.5.1",
+    "echarts-extension-amap": "^1.12.0",
     "eva-icons": "^1.1.3",
     "font-awesome": "^4.7.0",
+    "highcharts": "^11.4.7",
+    "highcharts-angular": "^4.0.1",
     "jwt-decode": "^4.0.0",
+    "ng-angular-popup": "^0.6.2",
+    "ng2-charts": "^6.0.1",
     "ngx-toastr": "^19.0.0",
     "primeicons": "^7.0.0",
     "primeng": "^17.18.9",
